fixed flex-wrap issues in library section; added footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,19 +87,26 @@ A:active {
   margin-left: 50px;
   margin-top: 30px;
   width:100%;
+  height: 510px;
   display: flex;
-  flex: 0 0 auto;
+
 }
 
 .library img {
   border: solid;
-  flex: 0 0 auto;
+  flex-grow: 0;
   margin: 5px;
+}
+
+#first {
+  align-self: left;
+  height:500px;
 }
 
 .next {
   display:flex;
-  flex-wrap: wrap;
+  flex-flow: column wrap;
+  justify-content: space-between;
 }
 
 .contactinfo li {
@@ -109,6 +116,14 @@ A:active {
   font-weight: bold;
   width: 30%;
   list-style: circle;
+}
+
+.footer {
+  text-align:center;
+  padding:50px;
+  background-color: rgb(92, 8, 8);
+  color:white;
+  font-size: 30px;
 }
 
 #greeting {
